# erc20-HubCultureBridge

./: .gitignore  .gitmodules  README.md  build-example.sh
HubCultureProxy/: build-baseimage.sh
HubCultureProxy/admin-signer/: Dockerfile  config.toml
HubCultureProxy/authority-signer/: Dockerfile
HubCultureProxy/baseimage/: Dockerfile
HubCultureProxy/baseimage/eth-proxy/: .gitignore  Cargo.toml  README.md
HubCultureProxy/baseimage/eth-proxy/cli/: eth-proxy.rs
HubCultureProxy/baseimage/eth-proxy/eth-log/: Cargo.toml  README.md
HubCultureProxy/baseimage/eth-proxy/eth-log/examples/: config.toml
HubCultureProxy/baseimage/eth-proxy/eth-log/src/: callback.rs  config.rs  error.rs  lib.rs  options.rs  util.rs
HubCultureProxy/baseimage/eth-proxy/eth-log/src/events/: encoder.rs  mod.rs  templater.rs
HubCultureProxy/baseimage/eth-proxy/eth-log/templates/: approval.tera  transfer.tera
HubCultureProxy/baseimage/eth-proxy/eth-rpc/: Cargo.toml  README.md
HubCultureProxy/baseimage/eth-proxy/eth-rpc/examples/: block-stream.rs
HubCultureProxy/baseimage/eth-proxy/eth-rpc/src/: crypto.rs  lib.rs  rpc.rs  transaction.rs
HubCultureProxy/baseimage/eth-proxy/eth-rpc/src/abi/: event.rs  function.rs  mod.rs
HubCultureProxy/baseimage/eth-proxy/eth-rpc/src/api/: error.rs  eth.rs  mod.rs  util.rs
HubCultureProxy/baseimage/eth-proxy/eth-rpc/src/transport/: helpers.rs  mod.rs  plex.rs  ws.rs
HubCultureProxy/baseimage/eth-proxy/eth-rpc/src/types/: block.rs  filter.rs  helpers.rs  log.rs  mod.rs  transaction.rs  uint8.rs
HubCultureProxy/baseimage/eth-proxy/eth-rpc/src/util/: bufmath.rs  mod.rs
HubCultureProxy/baseimage/eth-proxy/eth-rpc/tests/: tx-signing.rs
HubCultureProxy/baseimage/eth-proxy/proxy/: Cargo.toml
HubCultureProxy/baseimage/eth-proxy/proxy/src/: error.rs  http.rs  lib.rs  macros.rs  options.rs  policy.rs  util.rs
HubCultureProxy/baseimage/eth-proxy/proxy/src/ws/: mod.rs  types.rs  util.rs
HubCultureProxy/baseimage/eth-proxy/signer/: Cargo.toml
HubCultureProxy/baseimage/eth-proxy/signer-proxy/: Cargo.toml
HubCultureProxy/baseimage/eth-proxy/signer-proxy/src/: base.rs  error.rs  extension.rs  lib.rs  options.rs  util.rs
HubCultureProxy/baseimage/eth-proxy/signer-proxy/src/rpc/: error.rs  mod.rs  transaction.rs
HubCultureProxy/baseimage/eth-proxy/signer-proxy/src/transact/: handler.rs  mod.rs  nonce.rs  price.rs
HubCultureProxy/baseimage/eth-proxy/signer/examples/: config.toml
HubCultureProxy/baseimage/eth-proxy/signer/src/: config.rs  contracts.rs  crypto.rs  error.rs  ethtokens.rs  functions.rs  lib.rs  options.rs  types.rs  util.rs
HubCultureProxy/baseimage/eth-proxy/signer/src/rpc/: mod.rs  request.rs  response.rs  transaction.rs
HubCultureProxy/log-server/: Dockerfile  config.toml
HubCultureProxy/user-signer/: config.toml
HubCultureProxy/vault-signer/: config.toml
HubCultureSolidity/: Dockerfile  README.md
HubCultureSolidity/contracts/: HubCulture.abi  HubCulture.sol
HubCultureSolidity/testing/: README.md  contracts.spec  ident.spec  myth_graph.sh  myth_test.sh  pull_mythril.sh  requirements.txt  test.py  test.spec
HubCultureSolidity/utils/: condensed.sol  condenser.py
deployment/: README.md  launch.sh  shutdown.sh
doc/: README.md  backend-flow.md  service-isolation.md  test-user.md
example/: README.md  authorize-actors.py  basil.toml  example-calls.py  example-logs.py
middleware/: Dockerfile
utilities/: abstract_api_generator.py  template_generator.py
(+51 files in other folders)
