[package]
name = "eth-log"
version = "0.1.0"
authors = ["Forrest Marshall <forrest@mimirblockchain.solutions>"]

[dependencies]
proxy = { path = "../proxy" }
ethrpc = { path = "../eth-rpc" }
tokio-channel = "0.1.0"
tokio-util = { git = "https://github.com/forrest-marshall/tokio-util.git" }
tokio = "0.1.8"
tera = "0.11.16"
structopt = "0.2.10"
serde_derive = "1.0.27"
serde = "1.0.27"
toml = "0.4.8"
ignore = "0.4.4"
env_logger = "0.5.13"
log = "0.4.5"
url = "1.7.1"
