[package]
name = "ethrpc"
version = "0.1.0"
authors = ["Forrest Marshall <forrest@mimirblockchain.solutions>"]

[dependencies]
mimir-common = { git = "https://github.com/mimirblockchainsolutions/mimir-bridge-alpha.git", branch = "refactor" }
mimir-crypto = { git = "https://github.com/mimirblockchainsolutions/mimir-bridge-alpha.git", branch = "refactor" }
proxy = { path = "../proxy" }
tokio-util = { git = "https://github.com/forrest-marshall/tokio-util.git", branch = "develop" }
tokio-channel = "0.1.0"
tokio = "0.1.8"
rlp = { version = "0.3", default-features = false }
serde_derive = "1.0.27"
serde_json = "1.0.27"
serde = "1.0.27"
smallvec = { version = "0.6.5", features = ["serde"] }
env_logger = "0.5.13"
rand = "0.4.2"
log = "0.4.5"
url = "1.7.1"

