[package]
name = "signer-proxy"
version = "0.1.0"
authors = ["Forrest Marshall <forrest@mimirblockchain.solutions>"]

[dependencies]
signer = { path = "../signer" }
ethrpc = { path = "../eth-rpc" }
proxy = { path = "../proxy" }
tokio-channel = "0.1.0"
tokio = "0.1.8"
structopt = "0.2.10"
serde_derive = "1.0.27"
serde = "1.0.27"
log = "0.4.5"

